<resources>
    <string name="app_name">Lacak Resi</string>
    <string name="courier_tracker">Courier Tracker</string>
    <string name="awb_hint">Air Waybill</string>
    <string name="main_title">Waybill Track</string>
    <string name="lacak">Track</string>
    <string name="courier_item_icon" translatable="false">courier item icon</string>
    <string name="courier_name" translatable="false">Nama Kurir</string>
    <string name="no_resi" translatable="false">No. Resi</string>
    <string name="tujuan_pengiriman" translatable="false">Tujuan Pengiriman</string>
    <string name="status" translatable="false">Status</string>
    <string name="colon" translatable="false">:</string>
    <string name="courier_value" translatable="false">%s | %s</string>
    <string name="tracking_detail" translatable="false">%s, %s</string>
    <string name="courier_unavailable" translatable="false">%1$s | %2$s</string>
    <string name="alert_title" translatable="false">Oops !!</string>
    <string name="ok_button" translatable="false">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="history" translatable="false">History</string>
    <string name="delete">Delete</string>
    <string name="change_title">Change Title</string>
    <string name="track_desc" translatable="false">%s\npaket berada di %s</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="generic_error">Something went wrong</string>
    <string name="input_title">Input title</string>
    <string name="clear_history">Clear History</string>
    <string name="title_changed">Title changed</string>
    <string name="use_text">Use Text</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="tariff_check">Tariff Check</string>
    <string name="weight_gram">Weight (gram)</string>
    <string name="courier">Courier</string>
    <string name="calculate">Calculate</string>
    <string name="refresh_city_list">Refresh City List</string>
    <string name="unknown_origin">Unknown origin</string>
    <string name="unknown_city">Unknown city, please choose as suggested</string>
    <string name="unknown_destination">Unknown destination</string>
    <string name="empty_awb">Input Air waybill</string>
    <string name="empty_weight">Empty Weight</string>
    <string name="choose_courier">"Please choose available courier"</string>
    <string name="price" translatable="false">Rp. %d</string>
    <string name="etd">%s Days</string>
    <string name="service_detail" translatable="false">%s (%s)</string>
    <string name="ongkir_title">%s to %s</string>
    <string name="cek_ongkir_disclaimer">*Price is only up to city/district, price to sub-districts may different</string>
    <string name="check">Check</string>
    <string name="weight_text">Weight: %d gram</string>
    <string name="no_internet">No network connectivity</string>
    <string name="city_district">City</string>
    <string name="subdistrict">SubDistrict</string>
    <string name="no_service">Service not available</string>
    <string name="unknown_subdistrict">Unknown sub-district, please type as suggested</string>
    <string name="copy_air_waybill">Copy Air Waybill</string>
    <string name="gallery">Gallery</string>
    <string name="flash">Flash</string>
    <string name="help">Help</string>
    <string name="hint_help" translatable="false">hint_help</string>
    <string name="refresh_courier_list">Refresh Courier List</string>
    <string name="scan_result_hint" translatable="false">Hasil scan akan tertampil disini</string>
</resources>