<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_title"
        android:textColor="@color/defaultTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/input_title"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/btnDialogPositive"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle" />

    <Button
        android:id="@+id/btnDialogNegative"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/cancel"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/small_text"
        app:layout_constraintRight_toLeftOf="@id/btnDialogPositive"
        app:layout_constraintTop_toTopOf="@id/btnDialogPositive" />

    <Button
        android:id="@+id/btnDialogPositive"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/small_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDialogContent" />

</androidx.constraintlayout.widget.ConstraintLayout>