<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OngkirSetupFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/cekOngkirScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cekOngkirButtonCalculate"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/origin"
                android:textSize="@dimen/small_text"
                app:layout_constraintLeft_toLeftOf="@id/cekOngkirEtOrigin"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/cekOngkirEtOrigin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_state"
                android:hint="@string/city_district"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelOrigin" />

            <AutoCompleteTextView
                android:id="@+id/cekOngkirEtOriginSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_state"
                android:hint="@string/subdistrict"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cekOngkirEtOrigin" />

            <ProgressBar
                android:id="@+id/loadingOrigin"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/cekOngkirEtOrigin"
                app:layout_constraintRight_toRightOf="@id/cekOngkirEtOrigin"
                app:layout_constraintTop_toTopOf="@id/cekOngkirEtOrigin" />

            <ProgressBar
                android:id="@+id/loadingOriginSub"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/cekOngkirEtOriginSub"
                app:layout_constraintRight_toRightOf="@id/cekOngkirEtOriginSub"
                app:layout_constraintTop_toTopOf="@id/cekOngkirEtOriginSub" />

            <TextView
                android:id="@+id/labelDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/destination"
                android:textSize="@dimen/small_text"
                app:layout_constraintLeft_toLeftOf="@id/cekOngkirEtDestination"
                app:layout_constraintTop_toBottomOf="@id/cekOngkirEtOriginSub" />

            <AutoCompleteTextView
                android:id="@+id/cekOngkirEtDestination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_state"
                android:hint="@string/city_district"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDestination" />

            <ProgressBar
                android:id="@+id/loadingDestination"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/cekOngkirEtDestination"
                app:layout_constraintRight_toRightOf="@id/cekOngkirEtDestination"
                app:layout_constraintTop_toTopOf="@id/cekOngkirEtDestination" />

            <AutoCompleteTextView
                android:id="@+id/cekOngkirEtDestinationSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_state"
                android:hint="@string/subdistrict"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cekOngkirEtDestination" />

            <ProgressBar
                android:id="@+id/loadingDestinationSub"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/cekOngkirEtDestinationSub"
                app:layout_constraintRight_toRightOf="@id/cekOngkirEtDestinationSub"
                app:layout_constraintTop_toTopOf="@id/cekOngkirEtDestinationSub" />

            <TextView
                android:id="@+id/labelWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:labelFor="@id/cekOngkirEtWeight"
                android:text="@string/weight_gram"
                android:textSize="@dimen/small_text"
                app:layout_constraintLeft_toLeftOf="@id/cekOngkirEtWeight"
                app:layout_constraintTop_toBottomOf="@id/cekOngkirEtDestinationSub" />

            <EditText
                android:id="@+id/cekOngkirEtWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_state"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelWeight" />

            <TextView
                android:id="@+id/labelCourierList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/courier"
                android:textSize="@dimen/small_text"
                app:layout_constraintLeft_toLeftOf="@id/cekOngkirEtWeight"
                app:layout_constraintTop_toBottomOf="@id/cekOngkirEtWeight" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupCourier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelCourierList"
                app:selectionRequired="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cekOngkirButtonCalculate"
        style="@style/MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/check"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cekOngkirScrollView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>