<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CourierTrackFragment">

    <include
        layout="@layout/loading_layout"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/mainCourierList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tilMainAWB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMainAWB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/mainButtonSearch"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/mainButtonBarcodeScan"
        app:layout_constraintTop_toBottomOf="@id/mainCourierList"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mainAWBInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/awb_hint"
            android:paddingStart="8dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingEnd="8dp" />
    </com.google.android.material.textfield.TextInputLayout>
<!--    -->
<!--    <EditText-->
<!--        android:id="@+id/mainAWBInput"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:drawableStart="@drawable/ic_search"-->
<!--        android:drawablePadding="20dp"-->
<!--        android:hint="@string/awb_hint"-->
<!--        android:importantForAutofill="no"-->
<!--        android:inputType="text"-->
<!--        android:paddingStart="24dp"-->
<!--        android:paddingEnd="8dp"-->
<!--        app:layout_constraintBottom_toTopOf="@id/mainButtonSearch"-->
<!--        app:layout_constraintHorizontal_weight="8"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toLeftOf="@id/mainButtonBarcodeScan"-->
<!--        app:layout_constraintTop_toBottomOf="@id/mainCourierList" />-->

    <ImageButton
        android:id="@+id/mainButtonBarcodeScan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_selectable_background"
        android:contentDescription="@string/app_name"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/barcode"
        app:layout_constraintBottom_toBottomOf="@id/tilMainAWB"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tilMainAWB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tilMainAWB" />

    <Button
        android:id="@+id/mainButtonSearch"
        style="@style/MaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/lacak"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/mainSeparator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMainAWB" />

    <View
        android:id="@+id/mainSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorBlueLight"
        app:layout_constraintBottom_toTopOf="@id/mainHistoryTitle"
        app:layout_constraintTop_toBottomOf="@id/mainButtonSearch" />

    <TextView
        android:id="@+id/mainHistoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/history"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainSeparator" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainHistories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainHistoryTitle"
        tools:listitem="@layout/item_history" />

</androidx.constraintlayout.widget.ConstraintLayout>